<resources>
    <string name="app_name">Estados</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Contraseña</string>
    <string name="msg_fallo">Error...</string>
    <string name="title_activity_central">Central</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_estado">Estados</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="msg_nombre">Nombre del estado</string>
    <string name="msg_nombreCapital">Nombre de la capital</string>
    <string name="msg_poblacion">Cantidad de habitantes</string>
    <string name="msg_costas">Tiene costas</string>
    <string name="bt_add_estado">Agregar estado</string>
    <string name="bt_update_estado">Actualizar estado</string>
    <string name="bt_delete_estado">Eliminar estado</string>
    <string name="msg_estado_added">Estado agregado…</string>
    <string name="msg_estado_update">Estado actualizado…</string>
    <string name="msg_estado_delete">Estado eliminado…</string>
    <string name="msg_data">Faltan Datos!</string>
    <string name="msg_seguro_borrado">¿Esta seguro de eliminar el estado?</string>
    <string name="msg_si">Si</string>
    <string name="msg_no">No</string>
</resources>